# milvus_db

./: README.md  docker-compose.yml  download_pdf.py  embed_texts.py  insert_data.py  insert_embeddings.py  milvus_client.py  parse_pdf.py  parse_pdf_to_json.py  pyproject.toml  semantic search.py
